# forja

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
architectures/: index.html
commands/: index.html
docs/: architectures.md  commands.md  domains.md  index.md  plugins.md  quickstart.md
domains/: index.html
plugins/: index.html
quickstart/: index.html
search/: search_index.json
src/dataforge/: __init__.py  main.py
src/dataforge/commands/: __init__.py  add_cmd.py  classify_cmd.py  clean_cmd.py  doctor_cmd.py  export_cmd.py  fetch_cmd.py  init_cmd.py  inspect_cmd.py  migrate_cmd.py  plugins_cmd.py  run_cmd.py  status_cmd.py  upgrade_cmd.py
src/dataforge/core/: classifier.py  cleaner.py  config.py  entity_parser.py  plugins.py  project.py  templates.py  ui.py  workflows.py
src/dataforge/templates/components/entity/: dto.py.j2  migration.sql.j2  repository.py.j2
src/dataforge/templates/components/exporter/: excel_exporter.py.j2  sql_exporter.py.j2
src/dataforge/templates/components/pipeline/: pipeline.py.j2
src/dataforge/templates/components/source/: source.py.j2
src/dataforge/templates/etl_project/: Makefile  README.md.j2  _dotfile_env.example  _dotfile_gitignore  dataforge.toml.j2  pyproject.toml.j2
src/dataforge/templates/hexagonal_project/: Makefile  README.md.j2  _dotfile_gitignore  dataforge.toml.j2  pyproject.toml.j2
src/dataforge/templates/ml_project/: Makefile  README.md.j2  _dotfile_env.example  dataforge.toml.j2  docker-compose.yml  pyproject.toml.j2
(+44 files in other folders)
