[project]
name = "forja"
version = "1.0.1"
description = "Scaffolding inteligente para proyectos de datos en Python — ETL, hexagonal y ML pipeline"
requires-python = ">=3.10"
authors = [{ name = "Juan David Lopez Leon" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "jinja2>=3.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mkdocs-material>=9.5",
]

[project.scripts]
dataforge = "dataforge.main:app"
dfg = "dataforge.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
